# gage

./: .gitignore  Cargo.toml  Gage.toml  README.md  rustfmt.toml
etc/ssl/: bedlis.crt
etc/ssl/gage.home/: certificate.crt  certificate.csr  fullchain.pem  privkey.pem
etc/systemd/: gage.service
src/: error.rs  lib.rs  main.rs
src/core/: error.rs  mod.rs
src/core/shutdown/: handle.rs  mod.rs
src/ctx/: config.rs  error.rs  info.rs  logging.rs  mod.rs  options.rs  state.rs  utils.rs  vars.rs
src/svc/: mod.rs  shutdown.rs
src/svc/tasks/: sample.rs
src/svc/web/: error.rs  http.rs  mod.rs  pem.rs  redirect.rs  tls.rs
src/svc/web/actix/: app.rs  config.rs  mod.rs  server.rs
src/svc/web/axum/: app.rs  config.rs  mod.rs  server.rs
src/svc/web/ntex/: app.rs  config.rs  server.rs
tests/: load.sh  quich.sh  test_tcp.sh
